2011-04-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/ObjectiveC/ObjectiveCRuntime.m (-allClasses):
	* Modules/ObjectiveC/NSObject+additions.m (methods_for_class,
	ivars_for_class, +methodNames): Update to Objective-C 2 API.

2011-04-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Frameworks/StepTalk/STObjCRuntime.m: replace runtime specific typed
	selector code with the standard gnustep functions.

2011-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STLanguageManager.m (-dealloc): Fix
	typo. (Was calling -dealloc on self instead of super).

2011-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STObjCRuntime.m (STAllObjectiveCClasses,
	STCreateTypedSelector, STConstructMethodSignatureForSelector,
	selectors_from_list, STAllObjectiveCSelectors): Update to
	Objective-C 2 API.

2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/Environments/StepTalk.stenv: Add missing
	semicolon at end of plist dictionary.

2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STUndefinedObject.m (-forwardInvocation:):
	Clear result buffer to prevent crashes under GNUstep when the
	invoked method's result type is an object type.

2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/AppKit/GNUmakefile: Add header.m and footer.m to
	dependencies of %.list -> %.m rule.
	* Modules/AppKit/header.m (STGet@@NAME@@): Use local variable to
	get rid of compiler warning.
	* Modules/AppKit/AppKitNotifications.list: Update AppKit
	notification list to match recent change in gui.

	* Modules/AppKit/AppKitConstants.m:
	* Modules/AppKit/AppKitEvents.m:
	* Modules/AppKit/AppKitNotifications.m:
	Regenerated.

2008 Okt 28 Samuel Harvey

   * Modules/GDL2/GNUmakefile: Use ADDITIONAL_NATIVE_LIBS instead of
   GDL2_BUNDLE_LIBS to link GDL2 packages.
	
2007 Feb 14 Nicola Pero

   * All GNUmakefiles in the project: Use GNUSTEP_LIBRARY
   instead of GNUSTEP_INSTALLATION_DIR/Library.
